# pariraksakah

./: .gitignore  CYBERSECURITY_STRUCTURE_AND_STATUS.md  DEMO_GUIDE.md  HACKATHON_RUNBOOK.md  NEUROMORPHIC_AI_TEST_PLAN.md  README.md  SECTION_B_IMPLEMENTATION_PROGRESS.md  docker-compose.yml  pyrightconfig.json
docs/: gameday-runbook.md  swagger.yaml  test-validation-plan.md
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertFeed.tsx  ThreatGlobe.tsx
frontend/src/pages/: ChaosEngineering.tsx  Dashboard.tsx  DecentralizedNetwork.tsx  IncidentResponse.tsx  Innovations.tsx  LiveCapture.tsx  NeuromorphicBrain.tsx  PredictiveThreatIntelligence.tsx  QuantumReadiness.tsx  ThreatHunting.tsx
infrastructure/: chaos-kafka-init.sh  chaos-neo4j-schema.cypher  chaos-timescaledb-schema.sql  neuro-kafka-init.sh  neuro-neo4j-schema.cypher  neuro-timescaledb-schema.sql
ml-models/: phishing_retrain.py
scripts/: Invoke-AnonymousPhishing.ps1  Invoke-IncidentResponse.ps1  Invoke-MalwareBurst.ps1  Invoke-RansomwareScenario.ps1  Invoke-ThreatWave.ps1  _demo_common.ps1  live_event_feeder.js
services/access-control/: Dockerfile  go.mod  go.sum
services/api-gateway/: Dockerfile  go.mod  go.sum
services/chaos-ai-intelligence/: Dockerfile  main.py  requirements.txt
services/chaos-experiment-engine/: dataset_loader.py  defense_validator.py  main.py  requirements.txt  scenarios.json
services/chaos-guardrails/: Dockerfile  go.mod
services/chaos-injection-agent/: Cargo.toml  Dockerfile
services/chaos-injection-agent/src/: main.rs
services/chaos-scheduler/: Dockerfile  main.py  requirements.txt
services/dsrn/blockchain-ledger/: Cargo.toml  Dockerfile
services/dsrn/blockchain-ledger/src/: main.rs
services/dsrn/peer-node/: Cargo.toml  Dockerfile
services/dsrn/peer-node/src/: main.rs
services/incident-response/: Dockerfile  go.mod  go.sum
services/neuro-adaptive-immune/: Dockerfile  go.mod  main.go
services/neuro-anomaly-cortex/: Dockerfile  cortex_models.py  main.py  requirements.txt
services/neuro-dream-consolidator/: Dockerfile  dream_core.py  main.py  requirements.txt
services/neuro-evolution-system/: Dockerfile  evolution_core.py  main.py  requirements.txt
services/neuro-plasticity-manager/: Dockerfile  main.py  plasticity_core.py
services/neuro-snn-engine/: Dockerfile  db_client.py  integration_consumer.py  kafka_publisher.py  main.py  requirements.txt  snn_core.py
services/neuro-synaptic-memory/: Cargo.toml  Dockerfile
services/neuro-synaptic-memory/src/: main.rs
services/neuro-threat-hippocampus/: Dockerfile  hippocampus_core.py  main.py  requirements.txt
services/self-healing/: Cargo.toml
services/self-healing/src/: adapters.rs  db.rs  engine.rs  kafka.rs  main.rs  models.rs
services/swarm-agent/: Dockerfile
tests/: test_antiphishing_extensions.py
(+82 files in other folders)
