[package]
name = "chaos-injection-agent"
version = "1.0.0"
edition = "2021"
description = "Security Chaos Engineering Injection Agent"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
