[package]
name = "neuro_synaptic_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
memmap2 = "0.7.1"
lz4_flex = "0.11.1"
blake3 = "1.5.0"
postgres = "0.19.7"
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4"] }
