[package]
name = "dsrn_blockchain_ledger"
version = "0.1.0"
edition = "2021"
[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.3"
tokio = { version = "1", features = ["full"] }
rdkafka = "0.36"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
lazy_static = "1.4"
